force-app/main/default/objects/PIMAttribute__c/PIMAttribute__c.object-meta.xml
<CustomObject>
    <description>Colección de atributos de productos sincronizados desde el PIM</description>
    <label>PIM Attribute</label>
    <nameField>
        <label>PIM Attribute Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PIM Attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>