force-app/main/default/objects/PIMAttribute__c/fields/AttributeCode__c.field-meta.xml
<CustomField>
    <fullName>AttributeCode__c</fullName>
    <description>Código del atributo</description>
    <label>Attribute Code</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>