force-app/main/default/objects/PIMAttribute__c/fields/AttributeId__c.field-meta.xml
<CustomField>
    <fullName>AttributeId__c</fullName>
    <description>Clave del atributo</description>
    <label>Attribute Id</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>