force-app/main/default/objects/PIMAttribute__c/fields/RawValue__c.field-meta.xml
<CustomField>
    <fullName>RawValue__c</fullName>
    <label>Raw Value</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>