force-app/main/default/objects/PIMAttribute__c/fields/SourceDate__c.field-meta.xml
<CustomField>
    <fullName>SourceDate__c</fullName>
    <label>Source Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>